<resources>
    <string name="app_name">MoviePass</string>
    <string name="transition">transit</string>
    <string name="cancel">CANCEL</string>
    <string name="facebook_app_id">610492482426045</string>
    <string name="fb_login_protocol_scheme">fb610492482426045</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="app_ad_id">ca-app-pub-8502614652488669~7788092580</string>
    <string name="menu_bottom_navigation_main_profile">Account</string>
    <string name="menu_bottom_navigation_main_reservations">Reservations</string>
    <string name="menu_bottom_navigation_main_movies">Movies</string>
    <string name="menu_bottom_navigation_main_theaters">Theaters</string>
    <string name="menu_bottom_navigation_main_settings">Settings</string>
    <string name="one_device_alert">We\’ve noticed you switched to a different device</string>
    <string name="one_device_messege">Switching to a new device will permanently lock you out from any other device.</string>
    <string name="one_device_commit">Are you sure? </string>
    <string name="one_device_commit_message">This action cannot be undone.</string>
    <string name="braze_api_key">a31807ec-c0f6-4d73-be31-0b3a249abcb5</string>
    <string name="braze_endpoint">moyo.iad-03.braze.com</string>
    <string name="fcm_key">941385304025</string>
    <string name="activity_confirmation_movie_title">[Title]</string>
    <string name="activity_confirmation_theater">[Theater]</string>
    <string name="activity_confirmation_address">[Address]</string>
    <string name="activity_confirmation_city_things">[City Things]</string>
    <string name="activity_confirmation_time">Time</string>
    <string name="activity_confirmation_time_placeholder">[8:20 PM]</string>
    <string name="activity_confirmation_date">Date</string>
    <string name="activity_confirmation_date_placeholder">[8/20/1999]</string>
    <string name="activity_confirmation_auditorium">[Auditorium]</string>
    <string name="activity_confirmation_seat">[Seat]</string>
    <string name="activity_confirmation_purchase_ticket">You can now use your MoviePass card to purchase your ticket!</string>
    <string name="activity_confirmation_change_reservation">Change Reservation</string>
    <string name="activity_confirmation_pick_up_instructions">Please pick up your ticket.</string>
    <string name="activity_confirmation_confirmation_text">If asked, provide this zip code.</string>
    <string name="activity_confirmation_seat_selected"> Seat: </string>
    <string name="activity_no_internet_toast_message">You are offline. Please check your internet connection.</string>
    <string name="activity_no_internet_button">Retry</string>
    <string name="activity_main_mandatory_permissions">You must grant these permissions to use MoviePass</string>
    <string name="activity_movie_holder_title">[Title]</string>
    <string name="activity_movie_holder_rating">[Rating]</string>
    <string name="activity_movie_holder_running_time">[### minutes]</string>
    <string name="activity_movie_running_time_minutes">minutes</string>
    <string name="activity_movie_reviews">Reviews</string>
    <string name="activity_movie_choose_theater_time">Choose Theater &amp; Time</string>
    <string name="activity_movie_change_location">Change Location</string>
    <string name="activity_no_data_activity_header">Oops!</string>
    <string name="activity_no_data_activity_body">No internet connection found</string>
    <string name="activity_no_data_activity_button">Try again</string>
    <string name="activity_onboarding_button_log_in">Log in</string>
    <string name="activity_onboarding_button_sign_up">Sign up</string>
    <string name="activity_onboarding_not_ready">Not ready to Sign Up? Explore the app</string>
    <string name="activity_onboarding_header_1"></string>
    <string name="activity_onboarding_header_2">Over 4000 Theaters!</string>
    <string name="activity_onboarding_header_3">Any Movie</string>
    <string name="activity_onboarding_header_4">Become a Member</string>
    <string name="activity_onboarding_header_5">How It Works</string>
    <string name="activity_onboarding_header_final">Have a MoviePass Supported E-ticketing Theater Near You?</string>
    <string name="activity_onboarding_body_1">Join America\'s #1 Movie\nSubscription Service </string>
    <string name="activity_onboarding_body_2">Your MoviePass card is accepted in\nover 4000 theaters nationwide!</string>
    <string name="activity_onboarding_body_3">You can see any 2D movie from its first day of release.</string>
    <string name="activity_onboarding_body_4">Sign up, get your MoviePass card in the\nmail, and you\'re ready to go!</string>
    <string name="activity_onboarding_body_5">Use the app to check into a theater,\nthen swipe your card to get your ticket!</string>
    <string name="activity_onboarding_body_final">Look for the e-ticket icon: </string>
    <string name="tutorial_body_final">Go cardless by reserving same-day e-tickets right on the app.</string>
    <string name="tutorial_First_Header">Your MoviePass card is activated!</string>
    <string name="tutorial_First_Body">You can now use your MoviePass card to purchase tickets at the theater!</string>
    <string name="tutorial_First_See_How">See how it works </string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="tutorial_header_1">Search the App for Movies, Theaters  &amp; Showtimes</string>
    <string name="tutorial_body_1">There are no advanced reservations; same-day ticket sales only.</string>
    <string name="tutorial_header_2">Go to a Theater, Select a Screening, Click \"Check In\"</string>
    <string name="tutorial_body_2">You must be within 100 yards of the theater in order to check in.</string>
    <string name="tutorial_header_3">Use your MoviePass Card to Purchase Your Ticket!</string>
    <string name="tutorial_body_3">You have 30 minutes to swipe your card at a kiosk, or with a ticket agent.</string>
    <string name="tutorial_header_4">Movie Sold Out? Changed Your Mind?</string>
    <string name="tutorial_body_4">Press “Cancel Check-In,” and pick something new.</string>
    <string name="activity_select_seat_activity_title">SELECT YOUR SEAT</string>
    <string name="activity_select_seat_movie_title">[Title]</string>
    <string name="activity_select_seat_movie_genre">[Genre]</string>
    <string name="activity_select_seat_run_time_placeholder">[Time]</string>
    <string name="activity_select_seat_theater_name">[Theater]</string>
    <string name="activity_select_seat_auditorium">[Auditorium]</string>
    <string name="activity_select_seat_showtime">[Time]</string>
    <string name="activity_select_seat_seats">Seat:</string>
    <string name="activity_select_seat_seats_placeholder">Select a Seat</string>
    <string name="activity_select_seat_available">Available</string>
    <string name="activity_select_seat_unavailable">Unavailable</string>
    <string name="activity_select_seat_selected">Selected</string>
    <string name="activity_select_seat_reserve">Continue</string>
    <string name="activity_select_seat_select_first">Please select a seat before checking in</string>
    <string name="dialog_select_seat_wheelchair_message">You have selected an access space designated for disabled individuals.\n\n\nTap OK to select or CANCEL to select another seat.</string>
    <string name="dialog_select_seat_wheelchair_title">This is a Wheelchair Spot.</string>
    <string name="dialog_select_seat_companion_message">You have selected a seat designated for companions of disabled individuals, who require accessible seating because of a mobility disability.\n\n\nTap OK to select or CANCEL to select another seat.</string>
    <string name="dialog_select_seat_companion_title">This is a Companion Seat.</string>
    <string name="data_connection">Check Your Connection And Try Again</string>
    <string name="pending_reservation">You have a pending reservation</string>
    <string name="error">Error: Contact Customer Support</string>
    <string name="firstBoot">firstBoot</string>
    <string name="activity_sign_in_welcome_back">Welcome back</string>
    <string name="activity_sign_in_email">Email</string>
    <string name="activity_sign_in_password">Password</string>
    <string name="activity_sign_in_log_in">Log In</string>
    <string name="activity_sign_in_log_in_with_facebook">Log in with Facebook</string>
    <string name="activity_sign_in_dont_have_an_account">Don\'t have an account?</string>
    <string name="activity_sign_in_forgot_password">Forgot password?</string>
    <string name="activity_sign_in_forgot_password_title">Reset password</string>
    <string name="activity_sign_in_forgot_password_body">Enter your email address</string>
    <string name="activity_sign_up_step_one_get_started">Sign up and get your MoviePass!</string>
    <string name="activity_sign_up_step_one_email">Email</string>
    <string name="activity_sign_up_step_one_password">Password</string>
    <string name="activity_sign_up_step_one_sign_up">Sign Up</string>
    <string name="activity_sign_up_step_one_sign_up_with_facebook">Sign up with Facebook</string>
    <string name="activity_sign_up_step_one_not_ready">Not ready to sign up? Explore the app</string>
    <string name="fragment_sign_up_step_one_header">Tell us where to send your MoviePass card</string>
    <string name="fragment_sign_up_step_one_first_name">First Name</string>
    <string name="fragment_sign_up_step_one_last_name">Last Name</string>
    <string name="fragment_sign_up_step_one_address">Address</string>
    <string name="fragment_sign_up_step_one_address_two">Address 2</string>
    <string name="fragment_sign_up_step_one_city">City</string>
    <string name="fragment_sign_up_step_one_state">State</string>
    <string name="fragment_sign_up_step_one_zip">Zip</string>
    <string name="fragment_sign_up_step_one_next">Next</string>
    <string name="xml_account_preferences_account">Account</string>
    <string name="xml_account_preferences_account_billing_address">Billing Address</string>
    <string name="xml_account_preferences_account_shipping_address">Shipping Address</string>
    <string name="xml_account_preferences_account_moviepass_card">MoviePass Card Information</string>
    <string name="xml_account_preferences_account_log_out">Log Out</string>
    <string name="Theater_Age_policy">AGE POLICY</string>
    <string name="Policy_One">Flix is primarily adult-oriented. Those 17 and older may see any show any time.\n\nIf you are 6 to 16: You are good to go for all rated G, PG and PG‌-13 shows as long as you are with a parent or responsible adult. It isn’t really appropriate for you to see rated R motion pictures though.\n\nIf you are 2 to 5: You can see all G, PG and PG‌-13 movies that start before 7pm, but not after. Infants, toddlers and strollers are only allowed during special “Flix Family Day” events.</string>
    <string name="Theater_Late_policy">LATE ARRIVAL POLICY</string>
    <string name="Policy_two">We begin seating approximately 30 minutes prior to showtime in order to provide food and beverage service before the feature begins. We do not seat late arrivals after the feature begins, so you will not be able to see the show if you are not on time. </string>
    <string name="you_got_a_new_peak_pass">You got a Peak Pass!</string>
    <string name="peak_pass_description_onboard">All members get 1 Peak Pass a month which allows you to bypass one Peak Pricing surcharge.</string>
    <string name="peak_pass_subdescription_onboard">Just choose “Apply My Peak Pass” upon pressing “Continue” after choosing a showtime.</string>
    <string name="peak_pass_terms">Peak Passes do not roll over. If you cancel your check-in your Peak Pass will be added back to your account.</string>
</resources>