<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <!--<item-->
    <!--android:id="@+id/action_reservations"-->
    <!--android:enabled="true"-->
    <!--android:icon="@drawable/ic_e_tickets"-->
    <!--android:title="@string/menu_bottom_navigation_main_reservations" />-->

    <item
        android:id="@+id/action_movies"
        android:enabled="true"
        android:icon="@drawable/bottom_navigation_camera"
        android:iconTint="@color/white"
        android:title="@string/menu_bottom_navigation_main_movies" />

    <item
        android:id="@+id/action_theaters"
        android:enabled="true"
        android:icon="@drawable/bottom_navigation_theaters"
        android:iconTint="@color/white"
        android:title="@string/menu_bottom_navigation_main_theaters" />

    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/bottom_navigation_account"
        android:iconTint="@color/white"
        android:title="@string/menu_bottom_navigation_main_profile" />

    <!--<item-->
    <!--android:id="@+id/action_settings"-->
    <!--android:enabled="true"-->
    <!--android:icon="@drawable/iconsettingswhite"-->
    <!--android:iconTint="@color/white"-->
    <!--android:title="@string/menu_bottom_navigation_main_settings" />-->

</menu>