<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/relative_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="340dp"
            android:layout_height="135dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/moviepass_logo_red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:text="@string/activity_sign_up_step_one_get_started"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/white"
            android:hint="@string/activity_sign_up_step_one_email">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/white"
            android:hint="@string/activity_sign_up_step_one_password">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_sign_up"
            android:layout_height="48dp"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:elevation="2dp"
            android:layout_below="@+id/inputPassword"
            android:background="@drawable/button_red"
            android:text="@string/activity_sign_up_step_one_sign_up"
            android:textSize="15sp" />

        <!-- <com.facebook.login.widget.LoginButton -->
        <Button
            android:id="@+id/button_facebook_sign_up"
            android:layout_height="48dp"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:elevation="2dp"
            android:layout_below="@+id/button_sign_up"
            android:background="@drawable/button_facebook"
            android:text="@string/activity_sign_up_step_one_sign_up_with_facebook"
            android:textSize="15sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/not_ready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/activity_sign_up_step_one_not_ready"
        android:textColor="@color/red"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/double_margin_standard"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_alignParentBottom="true" />

</RelativeLayout>