<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/test_blue">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/a_lot_margin_standard"
        android:orientation="vertical">


        <TextView
            android:id="@+id/copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/doubledouble_margin_standard"
            android:text="@string/fragment_sign_up_step_one_header"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/LAYOUT1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/copy"
            android:layout_marginTop="@dimen/margin_standard"
            android:orientation="horizontal"
            android:padding="@dimen/margin_half">

            <EditText
                android:id="@+id/et_first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:hint="@string/fragment_sign_up_step_one_first_name"

                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/gray_icon" />


            <EditText
                android:id="@+id/et_last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:hint="@string/fragment_sign_up_step_one_last_name"
                android:maxLines="1"

                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/gray_icon" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/LAYOUT2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LAYOUT1"
            android:layout_marginTop="@dimen/margin_standard"
            android:orientation="vertical"
            android:padding="@dimen/margin_half">


            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/fragment_sign_up_step_one_address"
                android:inputType="text"
                android:maxLength="26"
                android:maxLines="1"
                android:textColor="@color/white"

                android:textColorHighlight="@color/white"
                android:textColorHint="@color/gray_icon" />


            <EditText
                android:id="@+id/et_address_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_standard"
                android:backgroundTint="@color/white"
                android:hint="@string/fragment_sign_up_step_one_address_two"
                android:inputType="text"
                android:maxLength="26"

                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/gray_icon" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LAYOUT3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LAYOUT2"
            android:layout_marginTop="@dimen/margin_standard"
            android:orientation="horizontal"
            android:padding="@dimen/margin_half">

            <EditText
                android:id="@+id/et_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:backgroundTint="@color/white"
                android:hint="@string/fragment_sign_up_step_one_city"
                android:inputType="text"
                android:maxLength="26"

                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/gray_icon" />


            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/state"
                android:layout_width="160dp"
                android:layout_height="42dp"
                android:hint="@string/fragment_sign_up_step_one_state"
                android:prompt="@string/fragment_sign_up_step_one_state"
                android:textColor="@color/white"
                android:textColorHint="@color/gray_icon" />


            <EditText
                android:id="@+id/et_zip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:backgroundTint="@color/white"

                android:hint="@string/fragment_sign_up_step_one_zip"
                android:inputType="number"
                android:maxLength="5"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/gray_icon" />


        </LinearLayout>


    </RelativeLayout>


    <TextView
        android:id="@+id/button_next"
        android:layout_width="200dp"
        android:layout_height="@dimen/basic_button_height"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom |center_horizontal"
        android:layout_marginBottom="@dimen/double_margin_standard"
        android:background="@drawable/selectseat_confirm_button"
        android:elevation="5dp"
        android:gravity="center"
        android:text="@string/fragment_sign_up_step_one_next"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <include
        android:id="@+id/progress"
        layout="@layout/view_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</android.support.design.widget.CoordinatorLayout>